samples/_failures_safe/1761730549_3331ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57e7845d.c:169:20: error: expected ‘)’ at end of input
  169 | void print_tokens(T
      |                    ^
      |                    )
